chap 05, corrections upt

--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -2,11 +2,13 @@
 
 - Un des enjeux de la thèse était de définir des représentations adaptées aux comportements d'apprentissage d'une architecture. Nous y avons répondu en présentant une méthode d'analyse des réponses des cartes aux phases de tests et envisagé des indicateurs.
 
+- Insister sur l'aspect utilisation de l'organisation topologiquement ordonnée inspirée de la biologie, qui est vraiment implémentée dans cette architecture.
+
 \section*{Discussion}
 
 La thèse que nous avons présentée cherche à créer un modèle d'architecture modulaire non-hiérarchique d'apprentissage non-supervisé, en utilisant des cartes de Kohonen en tant que modules.
 Par architecture modulaire, nous entendons qu'un module d'apprentissage n'a accès qu'à une interface définie comme connexion aux autres modules. Cette interface doit permettre de connecter des modules ayant des structures internes éventuellement différentes.
-Nous voulions également pouvoir intégrer des connexions rétroactives entre les cartes afin d'apporter l'aspect non-hiérachique, inspiré des rétroactions existant dans le cortex cérébral.
+Nous voulions également pouvoir intégrer des connexions rétroactives entre les cartes afin d'apporter l'aspect non-hiérarchique, inspiré des rétroactions existant dans le cortex cérébral.
 Cette thèse propose un modèle d'architecture, élaboré dans une démarche constructive~: à partir des architectures existantes dans la littérature et des modèles étudiés précédemment dans l'équipe, nous avons proposé un modèle d'architecture de cartes auto-organisatrice original, puis avons étudié son comportement.
 
 Dans cette thèse, nous présentons le modèle légèrement modifié de cartes de Kohonen que nous utilisons pour pouvoir les assembler en architecture.
