--- a/07-Relaxation/source.tex
+++ b/07-Relaxation/source.tex
@@ -48,15 +48,16 @@ Dans notre modèle, le mécanisme de relaxation cherche à la fois à trouver un
 \subsection{Problématique du chapitre}
 
 Dans ce chapitre, nous nous intéressons à la relaxation en tant que mécanisme d'interface entre cartes.
-Nous chercherons d'abord à décrire formellement l'algorithme de relaxation proposé dans le modèle CxSOM afin de pouvoir mieux analyser et représenter sa dynamique. Nous nous demanderons notamment si la relaxation est équivalente, comme dans une carte simple, à une recherche de maximum d'activation et expliciterons les propriétés de convergence qu'on attend de l'algorithme de relaxation pour pouvoir le considérer comme une recherche de BMU. Nous attendons notamment que la recherche de BMU converge et que le point de convergence soit unique.
+Nous chercherons d'abord à décrire formellement l'algorithme de relaxation proposé dans le modèle CxSOM afin de pouvoir mieux analyser et représenter sa dynamique. 
+Nous nous demanderons notamment si la relaxation est équivalente, comme dans une carte simple, à une recherche de maximum d'activation et expliciterons les propriétés de convergence qu'on attend de l'algorithme de relaxation pour pouvoir le considérer comme une recherche de BMU. Nous attendons notamment que la recherche de BMU converge et que le point de convergence soit unique.
 Le comportement de la relaxation dépend complètement des configurations des poids externes et contextuels des cartes de l'architecture. Ces configurations de poids résultent d'un processus de mise à jour et n'ont pas de formulation analytique.
-Ce chapitre cherchera à observer l'évolution de la relaxation dans différentes configurations de poids des cartes et de paramètres afin de répondre aux questions de convergence que nous aurons formulées.
 
-\section{Formalisme de l'algorithme de relaxation}
+\section{Formalisation de l'algorithme de relaxation}
 
 La recherche du BMU par relaxation dans l'architecture CxSOM se traduit par une recherche du maximum des activations de chacune des cartes de l'architecture.
 La relaxation est une heuristique de recherche de ce maximum.
-Nous décrivons dans cette section la relaxation sous une forme plus mathématique et formulons le problème d'optimisation qu'elle cherche à résoudre. Nous introduisons ainsi des notations plus détaillées qui nous permettront d'observer les quantités relatives à l'évolution de la relaxation en section suivante.
+Nous formalisation dans cette section la relaxation et formulons le problème d'optimisation qu'elle cherche à résoudre. 
+Nous introduisons ainsi des notations plus détaillées qui nous permettront d'observer les quantités relatives à l'évolution de la relaxation en section suivante.
 
 \subsection{Formulation de l'évolution des BMUs lors de la relaxation}
 
